--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,8 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
+JWT_SECRET=HpEhwS1AqoBNemZwZFUfBtBYzfm9A3Ne
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
